--- a/Shared/Shared.vcxproj
+++ b/Shared/Shared.vcxproj
@@ -468,6 +468,7 @@
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
+    <ClCompile Include="RangeSliderCtrl.cpp" />
     <ClCompile Include="RCCtrlParser.cpp">
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -806,6 +807,7 @@
     <ClInclude Include="PreferencesBase.h" />
     <ClInclude Include="ProgressDlg.h" />
     <ClInclude Include="PropertyPageHost.h" />
+    <ClInclude Include="RangeSliderCtrl.h" />
     <ClInclude Include="RCCtrlParser.h" />
     <ClInclude Include="RecordsetEx.h" />
     <ClInclude Include="Regkey.h" />
