--- a/Shared/Shared.vcxproj.filters
+++ b/Shared/Shared.vcxproj.filters
@@ -505,6 +505,9 @@
     <ClCompile Include="CalendarCtrlEx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="RangeSliderCtrl.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AboutDlg.h">
@@ -1048,6 +1051,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="CalendarCtrlEx.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="RangeSliderCtrl.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
