--- a/Shared/Shared.vcxproj.filters
+++ b/Shared/Shared.vcxproj.filters
@@ -508,6 +508,9 @@
     <ClCompile Include="RangeSliderCtrl.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Recurrence.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AboutDlg.h">
@@ -1054,6 +1057,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="RangeSliderCtrl.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Recurrence.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
