--- a/PluginHelpers/PluginHelpers.vcxproj.filters
+++ b/PluginHelpers/PluginHelpers.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="Win32.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DateUtil.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -84,6 +87,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Win32.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="DateUtil.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
