--- a/ContentControl/HTMLContentControl/HTMLContentControlCore/HTMLContentControlCore.csproj
+++ b/ContentControl/HTMLContentControl/HTMLContentControlCore/HTMLContentControlCore.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{F06CD02C-255D-40D7-8CB8-60968215C1F0}</ProjectGuid>
+    <ProjectGuid>{8A0B2029-7325-4527-9483-38DDC1F3B011}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MDContentControl</RootNamespace>
-    <AssemblyName>MDContentControlCore</AssemblyName>
+    <RootNamespace>HTMLContentControl</RootNamespace>
+    <AssemblyName>HTMLContentControlCore</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -38,13 +38,6 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="MarkdownSharp">
-      <HintPath>..\MarkdownSharp\bin\$(Configuration)\MarkdownSharp.dll</HintPath>
-    </Reference>
-    <Reference Include="MDContentControlCore, Version=1.0.0.0, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\$(Configuration)\MDContentControlCore.dll</HintPath>
-    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
@@ -57,11 +50,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MarkdownSharpEditorForm.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="MarkdownSharpEditorForm.Designer.cs" />
-    <Compile Include="MDContentControlCore.cs" />
+    <Compile Include="HTMLContentControlCore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -70,9 +59,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="MDContentControlCore.resx">
-      <DependentUpon>MDContentControlCore.cs</DependentUpon>
+    <EmbeddedResource Include="HTMLContentControlCore.resx">
+      <DependentUpon>HTMLContentControlCore.cs</DependentUpon>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ZetaControl\ZetaControl.csproj">
+      <Project>{B00AE765-8212-43FD-8E70-768A6C20EE93}</Project>
+      <Name>ZetaControl</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
