Fix weekday calculation

--- a/WorkloadExt/WorkloadExt.rc
+++ b/WorkloadExt/WorkloadExt.rc
@@ -303,7 +303,7 @@ STRINGTABLE DISCARDABLE
 BEGIN
     IDS_ATTRIB_DURATION     "Duration"
     IDS_COL_DURATION        "Duration"
-    IDS_ALLOCATION_FORMAT   "%d days"
+    IDS_ALLOCATION_FORMAT   "%d weekdays"
 END
 
 STRINGTABLE DISCARDABLE 
