--- a/ToDoList/ToDoList.vcxproj
+++ b/ToDoList/ToDoList.vcxproj
@@ -314,7 +314,7 @@ copy unicode_release\ToDoList.exe ..\..\todolist_Plugins\release /y
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <ClCompile Include="TDCImportExportMgr.cpp" />
-    <ClCompile Include="TDCMergeToDoList.cpp" />
+    <ClCompile Include="TDCMergeTasklist.cpp" />
     <ClCompile Include="TDCOutlookImportHelper.cpp" />
     <ClCompile Include="TdcRecurrence.cpp" />
     <ClCompile Include="tdcreminder.cpp">
@@ -495,6 +495,7 @@ copy unicode_release\ToDoList.exe ..\..\todolist_Plugins\release /y
     </ClCompile>
     <ClCompile Include="TDLQuickFindComboBox.cpp" />
     <ClCompile Include="TDLRecurringTaskEdit.cpp" />
+    <ClCompile Include="TDLRegularityComboBox.cpp" />
     <ClCompile Include="TDLReminderPeriodComboBox.cpp" />
     <ClCompile Include="TDLReuseRecurringTaskDlg.cpp">
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -706,6 +707,7 @@ copy unicode_release\ToDoList.exe ..\..\todolist_Plugins\release /y
     <ClInclude Include="TDLPriorityComboBox.h" />
     <ClInclude Include="TDLQuickFindComboBox.h" />
     <ClInclude Include="TDLRecurringTaskEdit.h" />
+    <ClInclude Include="TDLRegularityComboBox.h" />
     <ClInclude Include="TDLReminderPeriodComboBox.h" />
     <ClInclude Include="TDLReuseRecurringTaskDlg.h" />
     <ClInclude Include="TDLRiskComboBox.h" />
@@ -733,6 +735,7 @@ copy unicode_release\ToDoList.exe ..\..\todolist_Plugins\release /y
     <ClInclude Include="tdstringres.h" />
     <ClInclude Include="ToDoCtrl.h" />
     <ClInclude Include="ToDoCtrlData.h" />
+    <ClInclude Include="ToDoCtrlDataDefines.h" />
     <ClInclude Include="ToDoCtrlDataUtils.h" />
     <ClInclude Include="ToDoCtrlFind.h" />
     <ClInclude Include="ToDoCtrlMgr.h" />
