--- a/ToDoList/ToDoList.rc
+++ b/ToDoList/ToDoList.rc
@@ -283,7 +283,9 @@ BEGIN
     PUSHBUTTON      "&Edit...",IDC_EDIT_DISPLAYLANGUAGE,206,22,50,14
     CONTROL         "Show &full task path in Sticky",
                     IDC_SHOWFULLPATHINSTICKY,"Button",BS_AUTOCHECKBOX | 
-                    WS_TABSTOP,18,415,104,10
+                    WS_TABSTOP,18,437,104,10
+    LTEXT           "",IDC_TDLEXTENSIONHANDLER,19,247,375,8,WS_DISABLED
+    LTEXT           "",IDC_TDLPROTOCOLHANDLER,19,272,375,8,WS_DISABLED
 END
 
 IDD_PREFMULTIUSER_PAGE DIALOG DISCARDABLE  0, 0, 400, 236
