--- a/ContentControl/HTMLContentControl/MSHtmlEditorControl/MSHTMLEditorControl.csproj
+++ b/ContentControl/HTMLContentControl/MSHtmlEditorControl/MSHTMLEditorControl.csproj
@@ -259,7 +259,12 @@
   <PropertyGroup>
     <PreBuildEvent>
     </PreBuildEvent>
-    <PostBuildEvent>
-    </PostBuildEvent>
+    <PostBuildEvent>mkdir "$(SolutionDir)$(ConfigurationName)"
+copy $(TargetPath) "$(SolutionDir)$(ConfigurationName)\"
+mkdir "$(SolutionDir)..\ToDoList_Dev\ToDoList"
+mkdir "$(SolutionDir)..\ToDoList_Dev\ToDoList\unicode_$(ConfigurationName)"
+copy $(TargetPath) "$(SolutionDir)..\ToDoList_Dev\ToDoList\unicode_$(ConfigurationName)\"
+copy $(TargetDir)$(TargetName).pdb "$(SolutionDir)..\ToDoList_Dev\ToDoList\unicode_$(ConfigurationName)\"
+</PostBuildEvent>
   </PropertyGroup>
 </Project>
