--- a/ContentControl/HTMLContentControl/HTMLContentControlCore/HTMLContentControlCore.csproj
+++ b/ContentControl/HTMLContentControl/HTMLContentControlCore/HTMLContentControlCore.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="HTMLContentControlCore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TDLHtmlEditorControl.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="PluginHelpers">
@@ -67,10 +68,6 @@
     <ProjectReference Include="..\MSHtmlEditorControl\MSHTMLEditorControl.csproj">
       <Project>{5873DE0F-6853-4C8E-91A4-7A6861069A9A}</Project>
       <Name>MSHTMLEditorControl</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ZetaControl\ZetaControl.csproj">
-      <Project>{B00AE765-8212-43FD-8E70-768A6C20EE93}</Project>
-      <Name>ZetaControl</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
