--- a/ContentControl/HTMLContentControl/MSHtmlEditorControl/MSHTMLEditorControl.csproj
+++ b/ContentControl/HTMLContentControl/MSHtmlEditorControl/MSHTMLEditorControl.csproj
@@ -196,6 +196,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="HtmlEditorControl.resx">
       <DependentUpon>HtmlEditorControl.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\TablePropertyForm.resx">
       <DependentUpon>TablePropertyForm.cs</DependentUpon>
