--- a/PluginHelpers/PluginHelpers.vcxproj.filters
+++ b/PluginHelpers/PluginHelpers.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="CommandHandling.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DPIScaling.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -96,6 +99,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="CommandHandling.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="DPIScaling.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
