--- a/ContentControl/HTMLContentControl/HTMLContentControlCore/HTMLContentControlCore.csproj
+++ b/ContentControl/HTMLContentControl/HTMLContentControlCore/HTMLContentControlCore.csproj
@@ -33,6 +33,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>x86</PlatformTarget>
+    <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
   <PropertyGroup>
     <StartupObject />
