Implement preferences searching

--- a/ToDoList/ToDoList.rc
+++ b/ToDoList/ToDoList.rc
@@ -94,15 +94,13 @@ BEGIN
                     BS_AUTOCHECKBOX | BS_TOP | WS_TABSTOP,239,8,138,21
 END
 
-IDD_PREFERENCES DIALOG DISCARDABLE  0, 0, 547, 295
+IDD_PREFERENCES DIALOGEX 0, 0, 547, 295
 STYLE WS_POPUP | WS_CLIPCHILDREN | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 CAPTION "ToDoList Preferences"
 FONT 8, "Tahoma"
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,436,274,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,490,274,50,14
-    LTEXT           "&Categories",IDC_CATEGORY_TITLE,7,7,120,13,SS_NOTIFY | 
-                    SS_CENTERIMAGE | SS_SUNKEN,WS_EX_TRANSPARENT
     CONTROL         "Tree1",IDC_PAGES,"SysTreeView32",TVS_DISABLEDRAGDROP | 
                     TVS_SHOWSELALWAYS | TVS_FULLROWSELECT | WS_BORDER | 
                     WS_TABSTOP,7,20,120,246
@@ -112,6 +110,7 @@ BEGIN
                     WS_DISABLED
     LTEXT           "",IDC_PAGE_TITLE,136,7,404,13,SS_NOTIFY | 
                     SS_CENTERIMAGE | SS_SUNKEN
+    EDITTEXT        IDC_SEARCH,7,7,120,14,ES_AUTOHSCROLL
 END
 
 IDD_PREFEXPORT_PAGE DIALOG DISCARDABLE  0, 0, 400, 216
