--- a/PluginHelpers/PluginHelpers.vcxproj.filters
+++ b/PluginHelpers/PluginHelpers.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClInclude Include="DPIScaling.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Toolbars.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -102,6 +105,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="DPIScaling.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Toolbars.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
