--- a/ImportExport/HTMLReportExporter/HTMLReportExporterCore/HTMLReportExporterCore.csproj
+++ b/ImportExport/HTMLReportExporter/HTMLReportExporterCore/HTMLReportExporterCore.csproj
@@ -40,6 +40,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
