--- a/ToDoList/ToDoList.vcxproj
+++ b/ToDoList/ToDoList.vcxproj
@@ -336,10 +336,6 @@ copy unicode_release\ToDoList.exe ..\..\todolist_Plugins\release /y
     <ClCompile Include="TDCToDoCtrlPreferenceHelper.cpp" />
     <ClCompile Include="TDCToolsCmdlineParser.cpp" />
     <ClCompile Include="TDCToolsHelper.cpp" />
-    <ClCompile Include="TDCUIExtensionHelper.cpp">
-      <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
-    </ClCompile>
     <ClCompile Include="TDCWebUpdateScript.cpp">
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -646,6 +642,7 @@ copy unicode_release\ToDoList.exe ..\..\todolist_Plugins\release /y
     <ClInclude Include="tdcreminder.h" />
     <ClInclude Include="TDCSearchParamHelper.h" />
     <ClInclude Include="TDCSimpleTextContent.h" />
+    <ClInclude Include="tdcsort.h" />
     <ClInclude Include="TDCSourceControl.h" />
     <ClInclude Include="TDCStartupOptions.h" />
     <ClInclude Include="tdcstatic.h" />
@@ -655,7 +652,6 @@ copy unicode_release\ToDoList.exe ..\..\todolist_Plugins\release /y
     <ClInclude Include="TDCToDoCtrlPreferenceHelper.h" />
     <ClInclude Include="TDCToolsCmdlineParser.h" />
     <ClInclude Include="TDCToolsHelper.h" />
-    <ClInclude Include="TDCUIExtensionHelper.h" />
     <ClInclude Include="TDCWebUpdateScript.h" />
     <ClInclude Include="TDLAboutDlg.h" />
     <ClInclude Include="TDLAddLoggedTimeDlg.h" />
