--- a/Interfaces/Interfaces.vcxproj
+++ b/Interfaces/Interfaces.vcxproj
@@ -117,6 +117,9 @@
     <ClCompile Include="ImportExportComboBox.cpp" />
     <ClCompile Include="ImportExportMgr.cpp" />
     <ClCompile Include="ImportExportUIHelper.cpp" />
+    <ClCompile Include="RichEditSpellCheck.cpp" />
+    <ClCompile Include="SpellCheckDlg.cpp" />
+    <ClCompile Include="SpellChecker.cpp" />
     <ClCompile Include="StdAfx.cpp" />
     <ClCompile Include="TasklistStorageMgr.cpp" />
     <ClCompile Include="UIExtensionHelper.cpp" />
@@ -140,6 +143,9 @@
     <ClInclude Include="ITaskListStorage.h" />
     <ClInclude Include="ITransText.h" />
     <ClInclude Include="IUIExtension.h" />
+    <ClInclude Include="RichEditSpellCheck.h" />
+    <ClInclude Include="SpellCheckDlg.h" />
+    <ClInclude Include="SpellChecker.h" />
     <ClInclude Include="StdAfx.h" />
     <ClInclude Include="TaskListStorageMgr.h" />
     <ClInclude Include="UIExtensionHelper.h" />
