--- a/Interfaces/Interfaces.vcxproj
+++ b/Interfaces/Interfaces.vcxproj
@@ -149,7 +149,7 @@
     <ClInclude Include="SpellCheckDlg.h" />
     <ClInclude Include="SpellChecker.h" />
     <ClInclude Include="StdAfx.h" />
-    <ClInclude Include="TaskfileSchemaDef.h" />
+    <ClInclude Include="TasklistSchemaDef.h" />
     <ClInclude Include="TaskListStorageMgr.h" />
     <ClInclude Include="UIExtensionHelper.h" />
     <ClInclude Include="UIExtensionMgr.h" />
