Refactor list array into separate class

--- a/KanbanBoard/KanbanBoard.vcxproj
+++ b/KanbanBoard/KanbanBoard.vcxproj
@@ -175,6 +175,7 @@ copy unicode_debug\KanbanBoard.dll ..\todolist\unicode_debug /y
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
+    <ClCompile Include="KanbanListCtrlArray.cpp" />
     <ClCompile Include="KanbanOptionComboBox.cpp" />
     <ClCompile Include="KanbanPreferencesDlg.cpp">
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -222,6 +223,7 @@ copy unicode_debug\KanbanBoard.dll ..\todolist\unicode_debug /y
     <ClInclude Include="KanbanEnum.h" />
     <ClInclude Include="KanbanFixedColumnListCtrl.h" />
     <ClInclude Include="KanbanListCtrl.h" />
+    <ClInclude Include="KanbanListCtrlArray.h" />
     <ClInclude Include="Kanbanmsg.h" />
     <ClInclude Include="KanbanOptionComboBox.h" />
     <ClInclude Include="KanbanPreferencesDlg.h" />
