Fix saving to image

--- a/KanbanBoard/KanbanBoard.rc
+++ b/KanbanBoard/KanbanBoard.rc
@@ -72,15 +72,15 @@ END
 IDD_KANBAN_DIALOG DIALOGEX 0, 0, 411, 189
 STYLE WS_CHILD
 EXSTYLE WS_EX_CONTROLPARENT | WS_EX_APPWINDOW
-FONT 8, "Tahoma", 0, 0, 0x1
+FONT 8, "Tahoma"
 BEGIN
     LTEXT           "Attribute to 'track'",IDC_ATTRIBUTES_LABEL,0,2,114,8
     COMBOBOX        IDC_ATTRIBUTES,0,13,105,116,CBS_DROPDOWNLIST | CBS_SORT | 
                     WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        IDC_CUSTOMATTRIB,112,12,105,30,CBS_DROPDOWNLIST | 
+    COMBOBOX        IDC_CUSTOMATTRIB,112,13,105,30,CBS_DROPDOWNLIST | 
                     CBS_SORT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "&Options",IDC_OPTIONS_LABEL,223,2,105,8
-    COMBOBOX        IDC_OPTIONS,223,12,105,116,CBS_DROPDOWNLIST | 
+    COMBOBOX        IDC_OPTIONS,223,13,105,116,CBS_DROPDOWNLIST | 
                     CBS_OWNERDRAWFIXED | CBS_SORT | CBS_HASSTRINGS | 
                     WS_VSCROLL | WS_TABSTOP
     CONTROL         "",IDC_TB_PLACEHOLDER,"Static",SS_BLACKFRAME | NOT 
