Add slider label

--- a/WorkloadExt/WorkloadExt.rc
+++ b/WorkloadExt/WorkloadExt.rc
@@ -337,6 +337,7 @@ BEGIN
     IDS_COL_TOTAL           "Total"
     IDS_TOTALSDATERANGE     "Current Period: %s"
     IDS_PERIODDURATION      "Current Period: %d weekdays"
+    IDS_ACTIVEDATERANGE     "Cu&rrent Period Range (%s)"
 END
 
 STRINGTABLE DISCARDABLE 
